--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.Info.cshtml
@@ -457,6 +457,15 @@
     }
     <div class="form-group row">
         <div class="col-md-3">
+            <nop-label asp-for="MustChangePasswordAtNextLogin" />
+        </div>
+        <div class="col-md-9">
+            <nop-editor asp-for="MustChangePasswordAtNextLogin" />
+            <span asp-validation-for="MustChangePasswordAtNextLogin"></span>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-md-3">
             <nop-label asp-for="AdminComment" />
         </div>
         <div class="col-md-9">
