--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.Info.cshtml
@@ -457,11 +457,11 @@
     }
     <div class="form-group row">
         <div class="col-md-3">
-            <nop-label asp-for="MustChangePasswordAtNextLogin" />
+            <nop-label asp-for="MustChangePassword" />
         </div>
         <div class="col-md-9">
-            <nop-editor asp-for="MustChangePasswordAtNextLogin" />
-            <span asp-validation-for="MustChangePasswordAtNextLogin"></span>
+            <nop-editor asp-for="MustChangePassword" />
+            <span asp-validation-for="MustChangePassword"></span>
         </div>
     </div>
     <div class="form-group row">
